2008-07-22  Guillem Jover  <guillem@debian.org>

	* src/query.c (ignoredependss): Remove unused variable.

2008-07-10  Raphael Hertzog  <hertzog@debian.org>

	* man/dpkg-buildpackage.1: Give a detailed explanation of what the
	command does. Drop any duplicate information contained in the
	dpkg-genchanges/dpkg-source manual pages.
	* man/dpkg-genchanges.1: Document the -A option (was missing).

2008-07-10  Guillem Jover  <guillem@debian.org>

	* lib/dpkg-priv.h (min, max): New macros.
	* lib/tarfn.c: Include <dpkg-priv.h>.
	* src/configure.c: Likewise.
	* src/enquiry.c: Likewise.

	* src/configure.c (conffderef): Use max instead of hardcoded test.
	* lib/tarfn.c (TarExtractor): Use min instead of hardcoded test.
	* lib/fields.c (conffvalue_lastword): Likewise.
	* src/enquiry.c (limiteddescription): Likewise.
	* src/main.c (setforce): Likewise.
	* src/query.c (limiteddescription): Likewise.

2008-07-10  Guillem Jover  <guillem@debian.org>,
            Timothy G Abbott  <tabbott@mega-man.mit.edu>

	* src/configure.c (deferred_configure): Call namenodetouse to handle
	diverted conffiles. Use trig_file_activate on usenode, instead of
	trig_file_activate_byname, to activate the correct file trigger for
	the diverted conffile.

2008-07-06  Guillem Jover  <guillem@debian.org>

	* src/main.h: Remove comment about side effect in namenodetouse.
	* src/help.c (namenodetouse): Move call to trig_file_activate to ...
	* src/archives.c (tarobject): ... here.
	* src/processarc.c (process_archive): Likewise.
	* src/remove.c (removal_bulk_remove_files): Likewise.
	(removal_bulk_remove_leftover_dirs): Likewise.

2008-07-06  Michel Lespinasse  <walken@zoy.org>

	* dselect/baselist.cc (baselist::startdisplay): Create the
	pad with the list of the size of the display and not of the
	size of the list content itself.
	* dselect/basetop.cc (baselist::refreshlist): The part to
	display is always at the top of the pad.
	(baselist::redrawitemsrange): Simplified to redraw the real
	range only.