@@ -120,7 +120,7 @@ void checkpath(void) {
 }
 
 int ignore_depends(struct pkginfo *pkg) {
-  struct packageinlist *id;
+  struct pkginqueue *id;
   for (id= ignoredependss; id; id= id->next)
     if (id->pkg == pkg) return 1;
   return 0;
