@@ -1,5 +1,12 @@
 2008-07-22  Guillem Jover  <guillem@debian.org>
 
+	* src/main.h (ignoredependss): Change type to 'struct pkginqueue'.
+	* src/main.c (ignoredependss): Likewise.
+	(ignoredepends): Change type for variable 'ni' to 'struct pkginqueue'.
+	* src/help.c (ignore_depends): Likewise.
+
+2008-07-22  Guillem Jover  <guillem@debian.org>
+
 	* src/query.c (ignoredependss): Remove unused variable.
 
 2008-07-10  Raphael Hertzog  <hertzog@debian.org>
